--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Ascendants | Official Website</title>
     <meta name="description"
-        content="Official website for Anime Ascendants – the ultimate Anime Tower Defense experience on Roblox. Collect units, level up, and defend!">
+        content="Official website for Anime Ascendants!">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
